 	locales if there is no marked UTF-8 input string: this will be
 	somewhat faster, and for [g]sub() give the result in the
 	native encoding rather than in UTF-8 (which was the behaviour
 	prior to R 2.10.0).
 	
    o	A new argument 'skipCalls' has been added to browser() so that
	it can report the original context when called by other
	debugging functions.


DEPRECATED & DEFUNCT

    o	Bundles of packages are defunct.

    o	stats::clearNames() is defunct: use unname().

    o	Basic regular expressions are defunct, and strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() no longer
	have an 'extended' argument.

    o	methods::trySilent() is defunct.

    o	index.search() is no longer exported and has a different
	argument list.



	**************************************************
	*						 *
	*	       2.10 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.10.0 patched


INSTALLATION

    o	configure will be able to find a usable libtiff in some rare
	circumstances where it did not previously (where libtiff
	needed to be linked explicitly against -ljpeg).


DEPRECATED & DEFUNCT

    o	The 'extended' argument is deprecated in strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() (not just the
	value extended = FALSE) and will be removed in R 2.11.0.


BUG FIXES

    o	trigamma(x) and other psigamma(x, n) calls are now accurate for
	very large abs(x). (PR#14020)

    o	[g]sub() could use excessive stack space when used with a very
	long vector containing some non-ASCII data.

    o	The default method of weighted.mean(na.rm = TRUE) did not omit
	weights for NA observations in 2.10.0.  (PR#14032)

    o	[g]regexpr(pattern, fixed = TRUE) returned match positions in
	bytes (not characters) in an MBCS locale if 'pattern' was a
	single byte.

	[g]sub(fixed = TRUE) with a single-byte pattern could
	conceivably have matched part of a multibyte character in a
	non-UTF-8 MBCS.
	